fix: modified about-us now text works on dark mode

--- a/Template/styles/article.css
+++ b/Template/styles/article.css
@@ -64,7 +64,7 @@
   }
 
   .titulo-article {
-    @apply text-8xl font-medium pt-20 pb-4 text-center;
+    @apply text-8xl font-medium pt-20 pb-4 text-center dark:text-gray-100;
     font-weight: 500;
   }
 
